Update addStar.java